[gd_scene load_steps=2 format=3 uid="uid://d34t0kmg60mve"]

[ext_resource type="Script" path="res://addons/egoventure/nodes/boombox.gd" id="1"]

[node name="Boombox" type="Node"]
script = ExtResource("1")

[node name="Music1" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Music2" type="AudioStreamPlayer" parent="."]
volume_db = -50.0
bus = &"Music"

[node name="Background1" type="AudioStreamPlayer" parent="."]
volume_db = -50.0
bus = &"Effects"

[node name="Background2" type="AudioStreamPlayer" parent="."]
bus = &"Effects"

[node name="Effects" type="AudioStreamPlayer" parent="."]
bus = &"Effects"

[connection signal="finished" from="Effects" to="." method="_on_Effects_finished"]
